--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,17 @@ allprojects {
     }
 }
 
+ext {
+    dagger_version = '2.30.1'
+    lifecycle_version = '2.2.0'
+    retrofit_version = '2.9.0'
+    glide_version = '4.11.0'
+    interceptor_version = '4.9.0'
+    mockito_version = '2.23.0'
+    lifecycle_version = '2.2.0'
+    room_version = '2.2.6'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
