Created UI elements and List View. Added Data models and Database code and structure.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
     }
 
     buildTypes {
+        debug{
+            buildConfigField "String", 'BASE_URL', '"https://dl.dropboxusercontent.com"'
+        }
         release {
+            buildConfigField "String", 'BASE_URL', '"https://dl.dropboxusercontent.com"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -53,10 +57,14 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
 
     //Glide
@@ -76,4 +84,5 @@ dependencies {
     testImplementation "org.mockito:mockito-core:$mockito_version"
     testImplementation "org.mockito:mockito-inline:$mockito_version"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
 }
