--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ ext {
     mockito_version = '2.23.0'
     lifecycle_version = '2.2.0'
     room_version = '2.2.6'
+    coroutine_version = '1.4.2-native-mt'
+    retrofit_coroutines_adapter_version = "0.9.2"
 }
 
 task clean(type: Delete) {
