--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,7 +22,7 @@ allprojects {
 }
 
 ext {
-    dagger_version = '2.30.1'
+    dagger_version = '2.31.1'
     lifecycle_version = '2.2.0'
     retrofit_version = '2.9.0'
     glide_version = '4.11.0'
