--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
     buildTypes {
         debug{
             buildConfigField "String", 'BASE_URL', '"https://dl.dropboxusercontent.com"'
+            testCoverageEnabled true
         }
         release {
             buildConfigField "String", 'BASE_URL', '"https://dl.dropboxusercontent.com"'
@@ -42,6 +43,10 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
     }
 }
 
@@ -84,18 +89,17 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+    
 
-    //Testing
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation "org.mockito:mockito-core:$mockito_version"
-    testImplementation "org.mockito:mockito-inline:$mockito_version"
-    androidTestImplementation "org.mockito:mockito-core:$mockito_version"
-    androidTestImplementation "org.mockito:mockito-inline:$mockito_version"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "androidx.fragment:fragment-testing:1.2.5"
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
+    //androidTests
+    debugImplementation 'junit:junit:4.13.1'
+    debugImplementation 'androidx.test.ext:junit:1.1.2'
+    debugImplementation 'androidx.test:runner:1.3.0'
+    debugImplementation 'androidx.test:rules:1.3.0'
+    debugImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    debugImplementation "org.mockito:mockito-core:$mockito_version"
+    debugImplementation "org.mockito:mockito-inline:$mockito_version"
+    debugImplementation "androidx.arch.core:core-testing:2.1.0"
+    debugImplementation "androidx.arch.core:core-testing:2.1.0"
+    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
 }
